[package]
name = "tilt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumble = { git = "https://github.com/mwylde/rumble" }
chrono = "0.4"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
