[package]
name = "tilt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
confy = "0.4.0"
log = "0.4.14"
rumqttc = "0.8.0"
rumble = { git = "https://github.com/mwylde/rumble" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
simple_logger = "1.11.0"
tokio = { version = "1", features = ["full"] }
